--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "3008:3008"
     volumes:
       - ./back-server:/app
+      - /app/node_modules
     environment:
       - NODE_ENV=production
     depends_on:
@@ -20,6 +21,7 @@ services:
       - "8081:8081"
     volumes:
       - ./front-server:/app
+      - /app/node_modules
     environment:
       - NODE_ENV=development
     networks:
