--- a/back-server/package.json
+++ b/back-server/package.json
@@ -4,10 +4,15 @@
   "description": "Back server for Numdiag CMS",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
   },
   "author": "",
   "license": "ISC"
