--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     environment:
       - NODE_ENV=production
     depends_on:
-      - database
+      - cmsdatabase
+      - toherodb
     networks:
       - cms-network
 
@@ -33,7 +34,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
-      POSTGRES_DB: numdiagcms
+      POSTGRES_DB: numdiagcmsdb
     ports:
       - "5436:5432"
     volumes:
@@ -43,16 +44,16 @@ services:
 
   toherodb:
     image: postgres:17
-    container_name: toherodb-container
+    container_name: toherodb-cms-container
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
-      POSTGRES_DB: toheropuma
+      POSTGRES_DB: toherocmsdb
       # POSTGRES_ROLE: postgres
     ports:
       - "5437:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - toherocms-data:/var/lib/postgresql/data
     user: postgres
     networks:
       - cms-network
@@ -63,3 +64,4 @@ networks:
 
 volumes:
   numdiagcms-data:
+  toherocms-data:
