--- a/back-server/package.json
+++ b/back-server/package.json
@@ -2,6 +2,7 @@
   "name": "back-server",
   "version": "1.0.0",
   "description": "Back server for Numdiag CMS",
+  "type":"module",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -9,7 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
