--- a/front-server/package.json
+++ b/front-server/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.525.0", // library for icons , if not working use font awesome (need to dl with link in html)
+    "lucide-react": "^0.525.0", 
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1"
